fixed spacing issue

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -92,6 +92,7 @@ body {
 
 .postion {
   float: right;
+  margin-left: 60px;
 }
 
 .software h1, h5, ul {
